--- a/photography.css
+++ b/photography.css
@@ -7,7 +7,7 @@
     }
 }
 
-@media screen and (max-width: 480px) and (max-width: 767px){
+@media screen and (min-width: 480px) and (max-width: 767px){
     body{
     font-family: Georgia, 'Times New Roman', Times, serif;
     margin: 10px auto;
